# azure-sdk-tools

./: .editorconfig  .eslintrc.json  .gitignore  .gitmodules  .npmrc  .plan.md  .vally.yaml  .yamllint.tmp.yml  1  APIViewJsonUtility  CONTRIBUTING.md  Directory.Build.props  Directory.Build.targets  FINAL-PLAN.md  LICENSE  MSOBB_CHECKENFORCER_POC.md  NOTICE.txt  NuGet.Config  PR_13631_REVIEW.md  README.md  SECURITY.md  Solution.md  TEST-README.md  TestFile.md  VALIDATION_ISSUES.md  __azurite_db_queue__.json  __azurite_db_queue_extent__.json  agentic-workflow-design.md  apiview.proj  azure-pipelines.yml  cli-extension-design.md  cli-extension-impl.md  codeowners-entry-workflow.puml  codeowners-workflow.puml  command-logic.md  create-validation-issues.sh  dotnet.proj  feedback.md  for grouping  gao.md  (+24 more)
.azure-pipelines/: apiview-sync-staging.yml  apiview.yml  devops_sc_ping.yaml  dotnet.yml  js.yml  skill-eval.yml  warden.yml
.devcontainer/: Dockerfile  README.md  devcontainer.json
.github/: CODEOWNERS  CODEOWNERS_baseline_errors.txt  copilot-instructions.md  dependabot.yml  event-processor.config  fabricbot.json  package-lock.json  package.json
azsdk-evals/: README.md
copilot-review-analyzer/: DESIGN.md  EXECUTION_LOG.md  IMPLEMENTATION_PLAN.md  README.md  analyzer.db  config.yaml  pyproject.toml
copilot-review-analyzer/.github/workflows/: analyze.yml  ci.yml
copilot-review-analyzer/analyzer/: __init__.py  cli.py  config.py
copilot-review-analyzer/analyzer/github/: __init__.py  client.py  queries.py
copilot-review-analyzer/analyzer/llm/: __init__.py  client.py  judge.py  prompts.py  suggest.py
copilot-review-analyzer/analyzer/pipeline/: __init__.py  attribute.py  classify.py  gaps.py  ingest.py  metrics.py  orchestrate.py  suggest.py  themes.py
copilot-review-analyzer/analyzer/report/: data.py  export.py  render.py
copilot-review-analyzer/analyzer/store/: __init__.py  db.py  schema.sql
copilot-review-analyzer/tests/: test_acted_on.py  test_attribute.py  test_attribute_persist.py  test_client.py  test_config.py  test_db.py  test_export.py  test_gaps.py  test_judge.py  test_metrics.py  test_queries.py  test_suggest.py  test_themes.py
copilot-review-analyzer/tests/fixtures/: pr_page1.json  pr_page2.json
doc/: README.md  engsys_resource_management.md  engsys_workflows_and_skills.md  github_agent_workflow.md  openapi-hub-redirect.md  python_apiview_errors.md
documentation/: security-test-check-enforcer-validation-20260718.md  security-test-check-enforcer-validation.md
eng/: .gitignore  AzureSDKToolsKey.snk  CHECKENFORCER  Directory.Build.props  (+8 more)
tools/apiview/parsers/cpp-api-parser/: CMakeLists.txt  CMakePresets.json  README.md  cgmanifest.json  ci.yml  vcpkg.json
tools/apiview/parsers/cpp-api-parser/ApiViewProcessor/: ApiViewDiagnostic.cpp  ApiViewDiagnostic.hpp  ApiViewMessage.cpp  ApiViewMessage.hpp  ApiViewProcessor.cpp  ApiViewProcessor.hpp  AstDumper.cpp  AstDumper.hpp  AstNode.cpp  AstNode.hpp  CMakeLists.txt  CommentExtractor.cpp  CommentExtractor.hpp  JsonDumper.hpp  ProcessorImpl.cpp  ProcessorImpl.hpp  TextDumper.hpp
tools/apiview/parsers/cpp-api-parser/ParseAzureSdkCpp/: CMakeLists.txt  ParseAzureSdkCpp.cpp  ParseAzureSdkCpp.h
tools/apiview/parsers/cpp-api-parser/ParseTests/: CMakeLists.txt  tests.cpp
tools/apiview/parsers/cpp-api-parser/ParseTests/TestCases/: ClassesWithInternalAndDetail.cpp  CompileError1.cpp  DestructorTests.cpp  DocumentationTests.cpp  ExpressionTests.cpp  FriendsTests.cpp  SimpleTest.cpp  SimpleTest.json  TemplateTests.cpp  UsingNamespace.cpp
tools/apiview/parsers/cpp-api-parser/ParseTests/TestCases/attestation/azure-security-attestation/: ApiViewSettings.json
tools/apiview/parsers/cpp-api-parser/ParseTests/TestCases/core/azure-core/: ApiViewSettings.json
tools/apiview/parsers/cpp-api-parser/cmake-modules/: AzureVcpkg.cmake
tools/apiview/parsers/cpp-api-parser/ports/llvm/: portfile.cmake
tools/apiview/parsers/cpp-api-parser/vcpkg-triplets/: x64-windows-static-release.cmake
tools/apiview/parsers/rust-api-parser/rustdoc-types/: .gitignore  Cargo.toml  LICENSE-APACHE.txt  NOTICE.txt  README.md  add-typeshare.rs  lib.rs  post-processing-ts-morph.ts  post-processing.ts
tools/apiview/parsers/rust-api-parser/rustdoc-types/output/: rustdoc-types.ts
tools/mcp/python/azure-sdk-mcp-python-test/: CONTRIBUTING.md  Makefile  README.md  ci.yml  pyproject.toml
tools/mcp/python/azure-sdk-mcp-python-test/azure_sdk_mcp_python_test/: foo.py
tools/mcp/python/azure-sdk-mcp-python-test/tests/: test_foo.py
tools/sdk-ai-bots/azure-sdk-qa-bot-knowledge-graph-sync/: README.md  ci.yml  pyproject.toml  sync_knowledge_graph.yml
tools/sdk-ai-bots/azure-sdk-qa-bot-knowledge-graph-sync/azure_sdk_qa_bot_knowledge_graph_sync/: __init__.py  main.py
tools/sdk-ai-bots/azure-sdk-qa-bot-knowledge-graph-sync/azure_sdk_qa_bot_knowledge_graph_sync/graphrag/: __init__.py  publish_output.py  run_indexing.py  source_aware_reader.py
tools/sdk-ai-bots/azure-sdk-qa-bot-knowledge-graph-sync/azure_sdk_qa_bot_knowledge_graph_sync/services/: __init__.py  app_secret.py  storage_service.py
tools/sdk-ai-bots/azure-sdk-qa-bot-knowledge-graph-sync/config/: knowledge-config.schema.json
tools/sdk-ai-bots/azure-sdk-qa-bot-knowledge-graph-sync/graphrag_config/: settings.yaml
tools/sdk-ai-bots/azure-sdk-qa-bot-knowledge-graph-sync/graphrag_config/prompts/: community_report_graph.txt  extract_graph.txt  summarize_descriptions.txt
tools/sdk-ai-bots/azure-sdk-qa-bot-knowledge-graph-sync/src/: daily_sync.py  main.py
tools/sdk-ai-bots/azure-sdk-qa-bot-knowledge-graph-sync/src/graphrag/: __init__.py  publish_output.py  run_indexing.py  source_aware_reader.py
tools/sdk-ai-bots/azure-sdk-qa-bot-knowledge-graph-sync/src/services/: __init__.py  app_config.py  app_secret.py  configuration_loader.py  metadata_resolver.py  spector_processor.py  storage_service.py  typespec_processor.py
tools/sdk-ai-bots/azure-sdk-qa-bot-knowledge-graph-sync/tests/: __init__.py  conftest.py  test_configuration_loader.py  test_daily_sync.py  test_source_aware_reader.py
(+15235 files in other folders)
