[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "copilot-review-analyzer"
version = "0.1.0"
description = "Copilot Code-Review Effectiveness Analyzer"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-httpx>=0.30",
    "mypy>=1.10",
    "ruff>=0.5",
    "black>=24.0",
    "types-PyYAML>=6.0",
]

[project.scripts]
analyzer = "analyzer.cli:app"

[tool.setuptools.packages.find]
include = ["analyzer*"]

[tool.setuptools.package-data]
analyzer = ["store/schema.sql"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
files = ["analyzer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
