[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "azure-sdk-qa-bot-knowledge-graph-sync"
version = "1.0.0"
description = "Knowledge graph sync pipeline for Azure SDK QA Bot — runs a full GraphRAG build over the knowledge corpus and publishes the index artefacts"
requires-python = ">=3.11,<3.14"
dependencies = [
    "azure-identity>=1.20.0",
    "azure-storage-blob>=12.20.0",
    "azure-appconfiguration>=1.6.0",
    "azure-keyvault-secrets>=4.9.0",
    "graphrag>=3.1.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
sync-knowledge-graph = "src.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
