[package]
name = "rustdoc-types"
version = "0.1.0"
edition = "2021"

[features]
default = ["rustc-hash"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rustc-hash = { version = "2.0", optional = true }
typeshare = "1.0.0"
rustdoc-types = "0.33.0"

[dev-dependencies]
serde_json = "1.0"
bincode = "1"

[workspace]

[[bin]]
name = "rustdoc-types"
path = "add-typeshare.rs"